--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
 MONGO_URL=mongodb+srv://VoxMorph:VoxMorphMotDePasse@cluster0.waikpxj.mongodb.net/
-CLOUDINARY_CLOUD=xxxx
-CLOUDINARY_KEY=xxxx
-CLOUDINARY_SECRET=xxxx
+CLOUDINARY_CLOUD=dkzrgctbw
+CLOUDINARY_KEY=297451415689387
+CLOUDINARY_SECRET=EmUieadO9In76pCvosBaLhLeURQ
